<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp"
    tools:context=".profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/iv_profile_picture"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:padding="4dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_person"
        android:contentDescription="@string/desc_profile_picture"
        app:shapeAppearanceOverlay="@style/CircleImage"
        app:strokeColor="?attr/colorPrimary"
        app:strokeWidth="2dp" />

    <Button
        android:id="@+id/btn_change_photo"
        style="@style/Widget.Material3.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_change_photo"
        app:icon="@android:drawable/ic_menu_camera" />

    <TextView
        android:id="@+id/tv_profile_name"
        style="@style/TextAppearance.Material3.HeadlineMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:text="@string/label_user_name"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_profile_email"
        style="@style/TextAppearance.Material3.BodyLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:text="@string/label_user_email" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_logout"
        style="@style/Widget.Material3.Button.TonalButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="24dp"
        android:text="@string/btn_logout"
        android:textColor="@color/error"
        app:backgroundTint="@color/primary_container"
        app:cornerRadius="12dp" />

</LinearLayout>
